# apod-rust-client

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/client/: apod.rs  mod.rs
src/validators/: api_key_validator.rs  mod.rs
tests/: integration_tests.rs
