[package]
edition = "2021"
name = "apod-rust-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68" 
futures = "0.3" # for our async / await blocks
regex = "1" 
reqwest = {version = "0.11", features = ["json"]}# reqwest with JSON parsing support     
serde = {version = "1.0.160", features = ["derive"]} 
tokio = {version = "1", features = ["full"]}
